c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/if_null_body.c
int main(void) {
    int x = 0;
    if (0)
        ;
    else
        x = 1;
    return x;
}