c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/if_no_parens.c
int main(void) {
    if 0 return 1;
}